--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -143,11 +143,11 @@ height: 30%;
 
 
 
-@media screen (max-width: 768px){	
+@media screen and (min-width: 768px){	
 }
 
-@media screen (max-width: 980px){
+@media screen and (min-width: 980px){
 }
 
-@media screen (max-width: 640px){	
+@media screen and (min-width: 640px){	
 }
