--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -143,22 +143,22 @@ height: 30%;
 
 
 
-@media screen and (max-width:768px){
+@media screen and (min-width:768px){
  body {
  	background-color: #333;
- 	max-width: 400px;
+ 	max-width: 980px;
 }
 
-@media screen and (max-width: 980px){
+@media screen and (min-width: 980px){
  body {
  	background-color: #333;
- 	max-width: 400px;
+ 	max-width: 980px;
 }
 
 
-@media screen and (max-width: 640px){	
+@media screen and (min-width: 640px){	
  body {
  	background-color: #333;
- 	max-width: 400px;
+ 	max-width: 980px;
 }
 
