--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -143,21 +143,62 @@ height: 30%;
 
 
 
-@media screen and (max-width:768px){
-	.container{
-	width: 760px;
-}
+
 }
 
-@media screen and (max-width: 980px){
+@media screen and (max-width: 768px){
 	.container{
-	width: 970px;
+	width: 758px;
+	margin-left: .5%;
+	margin-right: .5%;
 }
+	aside{
+	width: 95%;
+	margin-right: 2%;
 }
+	section {
+	margin-left: 25px;
+	width: 94%;
+}
+	#header1{
+	margin-left: 110px;
+
+}
+	#header2{
+	padding-right: 97px;
+
+	}
+
 
 @media screen and (max-width: 640px){
 	.container{
-	width: 630px;
+	width:  630
+	width: 320px;
+	margin-left: 37px;
+	margin-right: 25%
+	margin-left: 50%;
+	margin-right: 25%;
 }
+	aside{
+	width: 75%;
+	margin-right: 17%;
+	
 }
+	section{
+	margin-left: 50px;
+	width: 75%;
+}
+
+	#header1{
+	margin-left: 1px;
+
+}
+	#header2{
+	padding-right: 97px;
+
+	}
+}
+
+
+
 
